<resources>
    <string name="app_name">kotlin_dashboard_example</string>
    <string name="hint_email">Enter your email</string>
    <string name="content_description_account_icon">email</string>
    <string name="hint_password">Password</string>
    <string name="help_text_password">Minimum 8 characters are accepted!</string>
    <string name="login_submit">Login</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="error_username">Please enter a valid email address.</string>
    <string name="home_welcome">Welcome to Demo Homepage!</string>
</resources>