<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_background"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewLogin"
            android:layout_width="match_parent"
            android:layout_height="285dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="#D3FFFFFF"
            app:cardCornerRadius="20dp"
            app:contentPaddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#20C7F1EF"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_input_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/hint_email"
                    android:textColorHint="#757575"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:hintTextColor="#1D1DE8"
                    app:startIconContentDescription="@string/content_description_account_icon"
                    app:startIconDrawable="@drawable/ic_account_32dp"
                    app:startIconTint="#1D49E8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textSize="20sp"
                        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_input_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/hint_password"
                    android:textColorHint="#757575"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:counterEnabled="true"
                    app:endIconMode="password_toggle"
                    app:endIconTint="#9A9595"
                    app:errorEnabled="true"
                    app:helperText="@string/help_text_password"
                    app:helperTextEnabled="true"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:startIconDrawable="@drawable/ic_password_32dp"
                    app:startIconTint="#1D49E8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textSize="20sp"
                        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="#00FFFFFF" />

                <Button
                    android:id="@+id/btn_login"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:text="@string/login_submit"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_login_32"
                    tools:ignore="HardcodedText,TouchTargetSizeCheck" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>